change some images

--- a/web/index.html
+++ b/web/index.html
@@ -109,7 +109,7 @@
 
     </section>
 
-    <!--Welcome Page-->
+    <!--&lt;!&ndash;Welcome Page&ndash;&gt;
     <section id="WelcomePage" style="width: 100%; height: 100vh ;">
 
         <div class="mask" style="background-color: rgba(0, 0, 0, 0.3);">
@@ -205,7 +205,7 @@
 
     </section>
 
-    <!--view cars-->
+    &lt;!&ndash;view cars&ndash;&gt;
     <section id="vewCars" class="w-100 h-100" style="background-color: whitesmoke">
 
         <div class="container">
@@ -231,7 +231,7 @@
                 </div>
 
                 <div class="col-8 ">
-                    <!--<div class="w-75 h-75 bg-white center-block mt-5">One of three columns</div>-->
+                    &lt;!&ndash;<div class="w-75 h-75 bg-white center-block mt-5">One of three columns</div>&ndash;&gt;
                     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-indicators">
                             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -328,7 +328,7 @@
 
     </section>
 
-<!--reservation-->
+    &lt;!&ndash;reservation&ndash;&gt;
     <section id="Reservation" style="width: 100%; height: 100vh ;background-color: white">
 
         <div class="container center-block ">
@@ -411,7 +411,7 @@
 
                     <div class="row">
                         <div class="col ms-5 mt-3">
-                            <!-- lose damage payment -->
+                            &lt;!&ndash; lose damage payment &ndash;&gt;
                             <div class="form-outline  me-4">
                                 <label class="form-label text-dark fw-light fs-4" for="loseDamagePayment" style="display: inline">Lose Damage Waiver Payment  :</label>
                                 <input type="text" id="loseDamagePayment" class="form-control shadow  border border-2 border-white bg-light rounded-3 w-25" style="display: inline"/>
@@ -423,7 +423,7 @@
 
                     <div class="row">
                         <div class="col ms-5 mt-3 mb-0">
-                            <!-- driver want or not -->
+                            &lt;!&ndash; driver want or not &ndash;&gt;
                             <div class="form-check">
                                 <input class="form-check-input" type="checkbox" value="" id="checkDriverIfWant" />
                                 <label class="form-check-label" for="checkDriverIfWant">If you want a driver please click</label>
@@ -512,7 +512,7 @@
 
                     </div>
 
-                    <!--button panel-->
+                    &lt;!&ndash;button panel&ndash;&gt;
                     <div class="row mt-4">
 
                         <div class="col"></div>
@@ -537,13 +537,13 @@
             </div>
 
         </div>
-    </section>
+    </section>-->
 
-    <!--<section id="CustomerDashBoard" style="width: 100%; height: 250% ;background-color: whitesmoke;">
+    <section id="CustomerDashBoard" style="width: 100%; height: 250% ;background-color: whitesmoke;">
 
         <img src="assets/images/1200x-1.jpg" alt="bg image" style="width: 100%; height: 75vh" class="img-fluid">
 
-        &lt;!&ndash;heading&ndash;&gt;
+        <!--heading-->
         <div class="mask" style="background-color: rgba(0, 0, 0, 0.6);position: absolute;top: -50%;bottom: 0;left: 0;right: 0;margin: auto; height: 75%">
             <div class="w-75 h-25" style="position: absolute;top: 0;bottom: 0;left: 0;right: 0;margin: auto;">
                 <figure class="text-center text-white">
@@ -562,7 +562,7 @@
 
         </div>
 
-        &lt;!&ndash;sort section and available cars&ndash;&gt;
+        <!--sort section and available cars-->
         <div class="row w-100 h-25 mt-3 text-center mb-5" style="position: relative;top: 8%">
 
             <figure class="text-center mt-3 text-black">
@@ -587,7 +587,7 @@
 
         </div>
 
-        &lt;!&ndash;all cars&ndash;&gt;
+        <!--all cars-->
         <div class="center-block" style="width: 80%;height: 75vh; position: relative;top: -138px;">
 
            <div class="row h-100 mb-5">
@@ -1186,7 +1186,7 @@
 
         </div>
 
-        &lt;!&ndash;copy rights&ndash;&gt;
+        <!--copy rights-->
         <div class="bg-black w-100 h-25" style="position: relative;top: 30%">
 
             <div class="container-fluid mb-5 mt-5" style="width: 100%;height: 50%;position: relative;top: 7%;">
@@ -1258,10 +1258,10 @@
 
     </section>
 
-    &lt;!&ndash;update rent details&ndash;&gt;
+    <!--update rent details-->
     <section id="RentCars"  style="width: 100%; height: 100vh ;background-color: whitesmoke">
 
-        &lt;!&ndash;edit reservation date and time&ndash;&gt;
+        <!--edit reservation date and time-->
         <div class="chooseData w-75 bg-white thumbnail shadow " style="height: 35%;position: absolute; top: 75%">
 
             <div class="row ms-3">
@@ -1346,7 +1346,6 @@
         </div>
 
     </section>
--->
 
     <!--view our services-->
     <section id="services" class="w-100 h-100" style="background-color: white">
@@ -1673,22 +1672,22 @@
                     <img src="assets/images/Koenigsegg%20Gemera_01%20copy.jpg" class="img-fluid hover-shadow center-block" alt="" style="width: 200px;height: 200px">
                 </div>
                 <div class="col ms-5 me-5 mb-5 border-2 border-light img-thumbnail img-responsive shadow">
-                    <img src="assets/images/download%20(1).gif" class="img-fluid hover-shadow center-block" alt="" style="width: 200px;height: 200px">
+                    <img src="assets/images/1_rangerover_tracking.jpg" class="img-fluid hover-shadow center-block" alt="" style="width: 200px;height: 200px">
                 </div>
             </div>
 
             <div class="row w-100" style="height: 25%;position: relative;top: 10px;">
                 <div class="col ms-5 me-5 mb-5 border-2 border-light img-thumbnail img-responsive shadow">
-                    <img src="assets/images/download%20(1).gif" class="img-fluid hover-shadow center-block" alt="" style="width: 200px;height: 200px">
+                    <img src="assets/images/Car-Rental-Service-Market-scaled.jpeg" class="img-fluid hover-shadow center-block" alt="" style="width: 200px;height: 200px">
                 </div>
                 <div class="col ms-5 me-5 mb-5 border-2 border-light img-thumbnail img-responsive shadow">
-                    <img src="assets/images/Koenigsegg%20Gemera_01%20copy.jpg" class="img-fluid hover-shadow center-block" alt="" style="width: 200px;height: 200px">
+                    <img src="assets/images/photo-1605559424843-9e4c228bf1c2.jpg" class="img-fluid hover-shadow center-block" alt="" style="width: 200px;height: 200px">
                 </div>
                 <div class="col ms-5 me-5 mb-5 border-2 border-light img-thumbnail img-responsive shadow">
-                    <img src="assets/images/1200x-1.jpg" class="img-fluid hover-shadow center-block" alt="" style="width: 200px;height: 200px">
+                    <img src="assets/images/RentalCarLG.jpg" class="img-fluid hover-shadow center-block" alt="" style="width: 200px;height: 200px">
                 </div>
                 <div class="col ms-5 me-5 mb-5 border-2 border-light img-thumbnail img-responsive shadow">
-                    <img src="assets/images/photo-1494976388531-d1058494cdd8.jpg" class="img-fluid hover-shadow center-block" alt="" style="width: 200px;height: 200px">
+                    <img src="assets/images/Self-Drive-Car-Rental-Agreement.jpg" class="img-fluid hover-shadow center-block" alt="" style="width: 200px;height: 200px">
                 </div>
             </div>
 
@@ -1781,123 +1780,7 @@
 
     <!--CopyRight Page-->
     <section id="CopyRightPage" class="w-100 h-100" style="background-color: whitesmoke">
-
-        <div class="container-fluid">
-            <!-- Grid container -->
-            <div class="container p-4">
-                <!-- Section: Images -->
-                <section class="">
-                    <div class="row">
-                        <div class="col-lg-2 col-md-12 mb-4 mb-md-0">
-                            <div
-                                    class="bg-image hover-overlay ripple shadow-1-strong rounded"
-                                    data-ripple-color="light"
-                            >
-                                <img
-                                        src="https://mdbcdn.b-cdn.net/img/new/fluid/city/113.webp"
-                                        class="w-100"
-                                />
-                                <a href="#!">
-                                    <div
-                                            class="mask"
-                                            style="background-color: rgba(251, 251, 251, 0.2);"
-                                    ></div>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-lg-2 col-md-12 mb-4 mb-md-0">
-                            <div
-                                    class="bg-image hover-overlay ripple shadow-1-strong rounded"
-                                    data-ripple-color="light"
-                            >
-                                <img
-                                        src="https://mdbcdn.b-cdn.net/img/new/fluid/city/111.webp"
-                                        class="w-100"
-                                />
-                                <a href="#!">
-                                    <div
-                                            class="mask"
-                                            style="background-color: rgba(251, 251, 251, 0.2);"
-                                    ></div>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-lg-2 col-md-12 mb-4 mb-md-0">
-                            <div
-                                    class="bg-image hover-overlay ripple shadow-1-strong rounded"
-                                    data-ripple-color="light"
-                            >
-                                <img
-                                        src="https://mdbcdn.b-cdn.net/img/new/fluid/city/112.webp"
-                                        class="w-100"
-                                />
-                                <a href="#!">
-                                    <div
-                                            class="mask"
-                                            style="background-color: rgba(251, 251, 251, 0.2);"
-                                    ></div>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-lg-2 col-md-12 mb-4 mb-md-0">
-                            <div
-                                    class="bg-image hover-overlay ripple shadow-1-strong rounded"
-                                    data-ripple-color="light"
-                            >
-                                <img
-                                        src="https://mdbcdn.b-cdn.net/img/new/fluid/city/114.webp"
-                                        class="w-100"
-                                />
-                                <a href="#!">
-                                    <div
-                                            class="mask"
-                                            style="background-color: rgba(251, 251, 251, 0.2);"
-                                    ></div>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-lg-2 col-md-12 mb-4 mb-md-0">
-                            <div
-                                    class="bg-image hover-overlay ripple shadow-1-strong rounded"
-                                    data-ripple-color="light"
-                            >
-                                <img
-                                        src="https://mdbcdn.b-cdn.net/img/new/fluid/city/115.webp"
-                                        class="w-100"
-                                />
-                                <a href="#!">
-                                    <div
-                                            class="mask"
-                                            style="background-color: rgba(251, 251, 251, 0.2);"
-                                    ></div>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-lg-2 col-md-12 mb-4 mb-md-0">
-                            <div
-                                    class="bg-image hover-overlay ripple shadow-1-strong rounded"
-                                    data-ripple-color="light"
-                            >
-                                <img
-                                        src="https://mdbcdn.b-cdn.net/img/new/fluid/city/116.webp"
-                                        class="w-100"
-                                />
-                                <a href="#!">
-                                    <div
-                                            class="mask"
-                                            style="background-color: rgba(251, 251, 251, 0.2);"
-                                    ></div>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </section>
-                <!-- Section: Images -->
-            </div>
-            <!-- Grid container -->
-        </div>
-
-       <div class="container-fluid w-100"  style="position: relative;top: 100px">
+       <div class="container-fluid w-100"  style="position: relative;top: 300px">
            <!-- Footer -->
            <footer class="text-center text-lg-start bg-light text-muted w-100 ">
                <!-- Section: Social media -->
@@ -4444,38 +4327,38 @@
                 <div class="row w-100 mb-5" style="height: 25%;">
                     <div class="col ms-5 me-5 mb-5 border-2 border-light img-thumbnail img-responsive shadow" style="background-image: radial-gradient(circle at top,#f5c2c7,#d63384);">
                         <h2 class="fw-bold text-center">Registered Users</h2>
-                        <h1 class="fw-bold text-center text-primary">10</h1>
+                        <h1 class="fw-bold text-center text-white">10</h1>
                     </div>
                     <div class="col ms-5 me-5 mb-5 border-2 border-light img-thumbnail img-responsive shadow" style="background-image: radial-gradient(circle at top,#c7dbd2,#198754);">
                         <h2 class="fw-bold text-center">Total Bookings</h2>
-                        <h1 class="fw-bold text-center text-primary">20</h1>
+                        <h1 class="fw-bold text-center text-white">20</h1>
                     </div>
                     <div class="col ms-5 me-5 mb-5 border-2 border-light img-thumbnail img-responsive shadow" style="background-image: radial-gradient(circle at top,#ffcd39,#fd7e14);">
                         <h2 class="fw-bold text-center">Available Cars</h2>
-                        <h1 class="fw-bold text-center text-primary">32</h1>
+                        <h1 class="fw-bold text-center text-white">32</h1>
                     </div>
                     <div class="col ms-5 me-5 mb-5 border-2 border-light img-thumbnail img-responsive shadow" style="background-image: radial-gradient(circle at top,orchid,#6f42c1);">
                         <h2 class="fw-bold text-center">Reserved Cars</h2>
-                        <h1 class="fw-bold text-center text-primary">20</h1>
+                        <h1 class="fw-bold text-center text-white">20</h1>
                     </div>
                 </div>
 
                 <div class="row w-100" style="height: 25%;position: relative;top: 10px;">
                     <div class="col ms-5 me-5 mb-5 border-2 border-light img-thumbnail img-responsive shadow" style="background-image: radial-gradient(circle at top,#e5c7ca,#dc3545);">
                         <h2 class="fw-bold text-center">Available Drivers</h2>
-                        <h1 class="fw-bold text-center text-primary">10</h1>
+                        <h1 class="fw-bold text-center text-white">10</h1>
                     </div>
                     <div class="col ms-5 me-5 mb-5 border-2 border-light img-thumbnail img-responsive shadow" style="background-image: radial-gradient(circle at top,#bacbe6,#6f42c1);">
                         <h2 class="fw-bold text-center">Occupied Drivers</h2>
-                        <h1 class="fw-bold text-center text-primary">10</h1>
+                        <h1 class="fw-bold text-center text-white">10</h1>
                     </div>
                     <div class="col ms-5 me-5 mb-5 border-2 border-light img-thumbnail img-responsive shadow" style="background-image: radial-gradient(circle at top,#f2e7c3,yellow);">
                         <h2 class="fw-bold text-center">Maintained Cars</h2>
-                        <h1 class="fw-bold text-center text-primary">10</h1>
+                        <h1 class="fw-bold text-center text-white">10</h1>
                     </div>
                     <div class="col ms-5 me-5 mb-5 border-2 border-light img-thumbnail img-responsive shadow" style="background-image: radial-gradient(circle at top,#fcf8e3,#664d03);">
                         <h2 class="fw-bold text-center">Under Maintained Cars</h2>
-                        <h1 class="fw-bold text-center text-primary">2</h1>
+                        <h1 class="fw-bold text-center text-white">2</h1>
                     </div>
                 </div>
 
