--- a/web/index.html
+++ b/web/index.html
@@ -58,7 +58,7 @@
     <section id="NavBar" >
 
         <!-- Navbar -->
-        <nav class=" navbar-expand-lg navbar " style="position: absolute; width: 100%; top: 10px;z-index: 4">
+        <nav class=" navbar-expand-lg navbar " style="position: absolute; width: 100%; top: 10px;z-index: 3">
             <!-- Container wrapper -->
             <div class="container">
                 <img src="assets/logo/car%20rental%20logo.jpg" id="logoImage" height="60" alt="Car Rental Logo"/>
@@ -125,7 +125,7 @@
 
            <div class="row">
                 <div class="col w-25 ">
-                    <div class="container ">
+                    <div class="container">
                         <label style="font-size: 15px" for="pickUpDate" class="text-white">When will I pickup you </label>
                         <div class="input-group date" style="width: 250px">
                             <input type="text" id="pickUpDate" class="form-control" placeholder="Pickup date">
@@ -146,7 +146,7 @@
                 <div class="col w-25 ">
                     <div class="container">
                         <label style="font-size: 15px" for="returnDate" class="text-white">When will I drop you off</label>
-                        <div class="input-group date " style="width: 250px">
+                        <div class="input-group date" style="width: 250px">
                             <input type="text" id="returnDate" class="form-control" placeholder="Return date">
                             <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
                         </div>
@@ -205,6 +205,126 @@
         </div>
 
        <img src="assets/images/Koenigsegg%20Gemera_01%20copy.jpg" alt="bg image" style="width: 100%; height: 100vh" class="img-fluid">
+
+        <!--Login Page-->
+        <div id="login_page_container">
+            <div class="border border-3 border-white rounded-1 shadow" style="position: relative;top: 50px;bottom: 0;right: 0;left: 0;margin: auto;width: 500px;height: 574px;background-image: radial-gradient(circle at top,white,#bacbe6);">
+
+                <div class="text-center" style="position: relative;top: 20px">
+                    <h1 class="mt-3 text-black fw-bold fst-italic" style="font-family: 'PT Serif', serif;">LOG IN</h1>
+                </div>
+
+                <form class="ms-5 me-5" style="position: relative; top: 50px;">
+                    <!-- Email input -->
+                    <div class="form-outline mb-4 ms-5 me-5">
+                        <input type="text" id="loginusername" class="form-control  border border-2 border-white bg-light rounded-3" />
+                        <label class="form-label text-black fw-light" for="loginusername" style="font-family: 'Edu VIC WA NT Beginner', cursive;font-size: 18px;">Username</label>
+                    </div>
+
+                    <!-- Password input -->
+                    <div class="form-outline mb-4 ms-5 me-5">
+                        <input type="password" id="loginpassword" class="form-control  border border-2 border-white bg-light" />
+                        <label class="form-label text-black fw-light" for="loginpassword" style="font-family: 'Edu VIC WA NT Beginner', cursive;font-size: 18px">Password</label>
+                    </div>
+
+                    <!-- 2 column grid layout for inline styling -->
+                    <div class="row mb-4">
+                        <div class="col d-flex justify-content-center">
+                            <!-- Checkbox -->
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" />
+                                <label class="form-check-label text-black" for="flexCheckDefault" style="font-family: 'Edu VIC WA NT Beginner', cursive;font-size: 18px">Remember me</label>
+                            </div>
+                        </div>
+
+                        <div class="col">
+                            <!-- Simple link -->
+                            <a  id="btnForgotPW"  style="font-family: 'Edu VIC WA NT Beginner', cursive;font-size: 18px;color: #6f42c1;text-decoration: none">Forgot password?</a>
+                        </div>
+                    </div>
+
+                    <div class="mb-4  me-5 ms-5">
+                        <!-- Submit button -->
+                        <button type="button" class="btn btn-block text-center text-white btn-primary shadow" style="display: inline;position: relative;left: 0;right: 0; margin: auto;">Log in</button>
+
+                    </div>
+
+                    <!-- Register buttons -->
+                    <div class="text-center">
+                        <p class="text-black" style="font-family: 'Edu VIC WA NT Beginner', cursive;font-size: 18px">Not a member? <a href="#"  style="font-family: 'Edu VIC WA NT Beginner', cursive;font-size: 18px;color: #6f42c1;text-decoration: none"> Register</a></p>
+                        <p class="text-black" style="font-family: 'Edu VIC WA NT Beginner', cursive;font-size: 18px">or sign up with:</p>
+                        <button type="button" class="btn btn-primary btn-floating mx-1">
+                            <i class="fab fa-facebook-f"></i>
+                        </button>
+
+                        <button type="button" class="btn btn-primary btn-floating mx-1">
+                            <i class="fab fa-google"></i>
+                        </button>
+
+                        <button type="button" class="btn btn-primary btn-floating mx-1">
+                            <i class="fab fa-twitter"></i>
+                        </button>
+
+                        <button type="button" class="btn btn-primary btn-floating mx-1">
+                            <i class="fab fa-github"></i>
+                        </button>
+                    </div>
+
+                    <hr class="divider-horizontal-blurry" />
+
+                    <div class="d-grid gap-2 d-md-flex justify-content-md-end" >
+                        <button type="button" class="btn btn-danger text-end" id="btnCancelLogin">Cancel</button>
+                    </div>
+
+                </form>
+
+            </div>
+        </div>
+
+        <!--Forgot Password Page-->
+        <div id="ForgotPasswordPage">
+
+            <div class="h-75 border border-3 border-white rounded-1 shadow" style="position: relative;top: 50px;bottom: 0;right: 0;left: 0;margin: auto;width: 500px;background-image: radial-gradient(circle at top,white,#bacbe6);">
+
+                <div class="text-center" style="position: relative;top: 20px">
+                    <h1 class="mt-3 text-white fw-bold fst-italic" style="font-family: 'PT Serif', serif;">RESET PASSWORD</h1>
+                </div>
+
+                <form class="ms-5 me-5" style="position: relative; top: 50px;">
+                    <!-- username input -->
+                    <div class="form-outline mb-4 ms-5 me-5">
+                        <input type="text" id="enterusername" class="form-control  border border-2 border-white bg-light rounded-3" />
+                        <label class="form-label text-white fw-light" for="enterusername" style="font-family: 'Edu VIC WA NT Beginner', cursive;font-size: 18px;">Username</label>
+                    </div>
+
+                    <!-- Password input -->
+                    <div class="form-outline mb-4 ms-5 me-5">
+                        <input type="password" id="newpassword" class="form-control  border border-2 border-white bg-light" />
+                        <label class="form-label text-white fw-light" for="newpassword" style="font-family: 'Edu VIC WA NT Beginner', cursive;font-size: 18px">New password</label>
+                    </div>
+
+                    <!-- Password input -->
+                    <div class="form-outline mb-4 ms-5 me-5">
+                        <input type="password" id="confirmpassword" class="form-control  border border-2 border-white bg-light" />
+                        <label class="form-label text-white fw-light" for="confirmpassword" style="font-family: 'Edu VIC WA NT Beginner', cursive;font-size: 18px">Confirm password</label>
+                    </div>
+
+                    <div class="mb-5  me-5 ms-5">
+                        <!-- Submit button -->
+                        <button type="button" class="btn btn-block text-center text-white btn-warning shadow" style="display: inline;position: relative;left: 0;right: 0; margin: auto;">Reset</button>
+                    </div>
+
+                    <hr class="divider-horizontal-blurry" />
+
+                    <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+                        <button type="button" class="btn btn-danger text-end" id="btnCancelForgotPW">Cancel</button>
+                    </div>
+
+                </form>
+
+            </div>
+
+        </div>
 
     </section>
 
@@ -893,128 +1013,6 @@
            </footer>
            <!-- Footer -->
        </div>
-    </section>
-
-    <!--Login Page-->
-    <section id="LoginPage" style="width: 100%;height: 100vh ;background-color: rgba(0, 0, 0, 0.6);">
-
-        <div class="border border-3 border-white rounded-1 shadow" style="position: relative;top: 50px;bottom: 0;right: 0;left: 0;margin: auto;width: 500px;height: 574px;background-image: radial-gradient(circle at top,#EAAA01,#000);">
-
-            <div class="text-center" style="position: relative;top: 20px">
-                <h1 class="mt-3 text-white fw-bold fst-italic" style="font-family: 'PT Serif', serif;">LOG IN</h1>
-            </div>
-
-            <form class="ms-5 me-5" style="position: relative; top: 50px;">
-                <!-- Email input -->
-                <div class="form-outline mb-4 ms-5 me-5">
-                    <input type="text" id="loginusername" class="form-control  border border-2 border-white bg-light rounded-3" />
-                    <label class="form-label text-white fw-light" for="loginusername" style="font-family: 'Edu VIC WA NT Beginner', cursive;font-size: 18px;">Username</label>
-                </div>
-
-                <!-- Password input -->
-                <div class="form-outline mb-4 ms-5 me-5">
-                    <input type="password" id="loginpassword" class="form-control  border border-2 border-white bg-light" />
-                    <label class="form-label text-white fw-light" for="loginpassword" style="font-family: 'Edu VIC WA NT Beginner', cursive;font-size: 18px">Password</label>
-                </div>
-
-                <!-- 2 column grid layout for inline styling -->
-                <div class="row mb-4">
-                    <div class="col d-flex justify-content-center">
-                        <!-- Checkbox -->
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" id="form2Example34" checked />
-                            <label class="form-check-label text-white" for="form2Example34" style="font-family: 'Edu VIC WA NT Beginner', cursive;font-size: 18px"> Remember me </label>
-                        </div>
-                    </div>
-
-                    <div class="col">
-                        <!-- Simple link -->
-                        <a href="#"  style="font-family: 'Edu VIC WA NT Beginner', cursive;font-size: 18px;color: #b6d4fe">Forgot password?</a>
-                    </div>
-                </div>
-
-                <div class="mb-4  me-5 ms-5">
-                    <!-- Submit button -->
-                    <button type="button" class="btn btn-block text-center text-white btn-warning shadow" style="display: inline;position: relative;left: 0;right: 0; margin: auto;">Log in</button>
-
-                </div>
-
-                <!-- Register buttons -->
-                <div class="text-center">
-                    <p class="text-white" style="font-family: 'Edu VIC WA NT Beginner', cursive;font-size: 18px">Not a member? <a href="#"  style="font-family: 'Edu VIC WA NT Beginner', cursive;font-size: 18px;color: #b6d4fe"> Register</a></p>
-                    <p class="text-white" style="font-family: 'Edu VIC WA NT Beginner', cursive;font-size: 18px">or sign up with:</p>
-                    <button type="button" class="btn btn-primary btn-floating mx-1">
-                        <i class="fab fa-facebook-f"></i>
-                    </button>
-
-                    <button type="button" class="btn btn-primary btn-floating mx-1">
-                        <i class="fab fa-google"></i>
-                    </button>
-
-                    <button type="button" class="btn btn-primary btn-floating mx-1">
-                        <i class="fab fa-twitter"></i>
-                    </button>
-
-                    <button type="button" class="btn btn-primary btn-floating mx-1">
-                        <i class="fab fa-github"></i>
-                    </button>
-                </div>
-
-                <hr class="divider-horizontal-blurry" />
-
-                <div class="d-grid gap-2 d-md-flex justify-content-md-end" >
-                    <button type="button" class="btn btn-danger text-end" id="btnCancelLogin">Cancel</button>
-                </div>
-                
-            </form>
-
-        </div>
-
-    </section>
-
-    <!--Forgot Password Page-->
-    <section id="ForgotPasswordPage" style="width: 100%;height: 100vh ;background-color: rgba(0, 0, 0, 0.6);">
-
-        <div class="h-75  border border-3 border-white rounded-1 shadow" style="position: relative;top: 50px;bottom: 0;right: 0;left: 0;margin: auto;width: 500px;background-image: radial-gradient(circle at top,#EAAA01,#000);">
-
-            <div class="text-center" style="position: relative;top: 20px">
-                <h1 class="mt-3 text-white fw-bold fst-italic" style="font-family: 'PT Serif', serif;">RESET PASSWORD</h1>
-            </div>
-
-            <form class="ms-5 me-5" style="position: relative; top: 50px;">
-                <!-- username input -->
-                <div class="form-outline mb-4 ms-5 me-5">
-                    <input type="text" id="enterusername" class="form-control  border border-2 border-white bg-light rounded-3" />
-                    <label class="form-label text-white fw-light" for="enterusername" style="font-family: 'Edu VIC WA NT Beginner', cursive;font-size: 18px;">Username</label>
-                </div>
-
-                <!-- Password input -->
-                <div class="form-outline mb-4 ms-5 me-5">
-                    <input type="password" id="newpassword" class="form-control  border border-2 border-white bg-light" />
-                    <label class="form-label text-white fw-light" for="newpassword" style="font-family: 'Edu VIC WA NT Beginner', cursive;font-size: 18px">New password</label>
-                </div>
-
-                <!-- Password input -->
-                <div class="form-outline mb-4 ms-5 me-5">
-                    <input type="password" id="confirmpassword" class="form-control  border border-2 border-white bg-light" />
-                    <label class="form-label text-white fw-light" for="confirmpassword" style="font-family: 'Edu VIC WA NT Beginner', cursive;font-size: 18px">Confirm password</label>
-                </div>
-
-                <div class="mb-5  me-5 ms-5">
-                    <!-- Submit button -->
-                    <button type="button" class="btn btn-block text-center text-white btn-warning shadow" style="display: inline;position: relative;left: 0;right: 0; margin: auto;">Reset</button>
-                </div>
-
-                <hr class="divider-horizontal-blurry" />
-
-                <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-                    <button type="button" class="btn btn-danger text-end" id="btnCancelForgotPW">Cancel</button>
-                </div>
-
-            </form>
-
-        </div>
-
     </section>
 
     <!--Customer Register Page-->
